ubiquity (1.3.3) UNRELEASED; urgency=low

  * GTK frontend: Move intro label widget from code to glade.
  * GTK frontend: Work around disappearing input focus on intro page.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  7 Dec 2006 09:55:28 +0000

ubiquity (1.3.2) feisty; urgency=low

  * Update to new partman-auto, merging the "Select a disk" page into
    "Prepare disk space".
  * Automatic update of included source packages: debian-installer-utils
    1.41ubuntu1, partman-auto 60ubuntu2, partman-base 97ubuntu2,
    partman-basicfilesystems 49ubuntu1, partman-basicmethods 32, partman-efi
    11, partman-ext3 43, partman-jfs 18, partman-newworld 15,
    partman-partitioning 44ubuntu1, partman-reiserfs 32, partman-target
    46ubuntu1, partman-xfs 30.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  7 Dec 2006 00:02:42 +0000

ubiquity (1.3.1) feisty; urgency=low

  * Strip out unnecessary parts from console-setup source (accidental due to
    semi-manual update).
  * Depend on a version of console-setup at least as new as the one in our
    source tree.
  * Work around a crash in broken_packages() due to inadequate python-apt
    Python protocol support.
  * Fix crash if auto_mountpoints somehow ends up still set to None while
    validating partitions (LP: #71046).
  * Fix infinite loop while creating initial-status log.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri,  1 Dec 2006 11:03:11 +0000

ubiquity (1.3.0) feisty; urgency=low

  * Defend a bit more against the apt cache going insane (closes: Malone
    #67689).
  * Handle EFAULT IOError exceptions while copying files (closes: Malone
    #67598).
  * KDE frontend: Treat more user-entered strings as Unicode rather than
    ASCII (closes: Malone #64667, #66742).
  * KDE frontend: Hide auto-resize frame rather than merely disabling it.
  * KDE frontend: Use a single progress bar for all copy and configuration
    steps.
  * KDE frontend: Disable going back or forward once the install progress